tests/toylang/neg/001462_mutation.toylang
program a = { var a : sleep; } .
